# py-unique-names-generator

./: .env.template  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto_merge.yml  ci.yml  lint.yml  notify_on_release.yml  tests_unit.yml
tests/unit/: test_generator.py
unique_names_generator/: __init__.py  generator.py
unique_names_generator/data/: __init__.py  latin.py  lex_adjetivos.py  lex_substantivos.py  lex_verbos.py  names.py  star_wars.py
