[tool.poetry]
name = "unique-names-generator"
version = "0.0.0"
description = ""
authors = ["Lucas Kawazoi <lucas@lexter.ai>"]
readme = "README.md"
packages = [{include = "unique_names_generator"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
flake8 = "^6.1.0"
pylint = "^2.17.5"
radon = "^6.0.1"
xenon = "^0.9.1"
mypy = "^1.5.1"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "unique_names_generator/__init__.py:__version__"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]
version_pattern = [
    "README.md:version: v{version}"
]
major_on_zero = false
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
